--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     阿斯顿发
     阿斯顿发
     44444
-<<<<<<< HEAD
-    branch:master
-=======
+    branch:master111111
     branch:dev
->>>>>>> dev
+
 </body>
 </html>
