--- a/index.html
+++ b/index.html
@@ -13,13 +13,8 @@
     阿斯顿发
     阿斯顿发
     44444
-<<<<<<< HEAD
     branch:master111111
     branch:dev
-
-=======
-    branch:master
-    branch:dev
->>>>>>> dev
+sssss
 </body>
 </html>
